@@ -1,7 +1,6 @@
 package org.dateroad.advertisement.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.dateroad.adImage.domain.AdImage;
 import org.dateroad.adImage.repository.AdImageRepository;
@@ -25,22 +24,16 @@ public class AdvertisementService {
     private final AdvertisementRepository advertisementRepository;
     private final AdImageRepository adImageRepository;
 
-    private static List<AdvImagesRes> getImages(final List<AdImage> adImages) {
-        return adImages.stream().map(
-                adImage -> AdvImagesRes.of(adImage.getImageUrl(), adImage.getSequence())
-        ).toList();
-    }
-
-    public AdvGetAllRes getAlladvertisements() {
+    public AdvGetAllRes getAllAdvertisements() {
         Pageable topFive = PageRequest.of(0, 5);
-        return AdvGetAllRes.of(advertisementRepository.findTop5ByOrderByCreatedDateDesc(topFive).
-                stream()
-                .map(AdvertisementDtoRes::of)
-                .collect(Collectors.toList()));
+        List<Advertisement> advertisements = advertisementRepository.findTop5ByOrderByCreatedDateDesc(topFive);
+        List<AdvertisementDtoRes> advertisementDtoResList = advertisements.stream()
+                .map(AdvertisementDtoRes::of).toList();
+        return AdvGetAllRes.of(advertisementDtoResList);
     }
 
-    public AdvGetDetailRes getadvertisementsDetail(final Long advId) {
-        Advertisement advertisement = getadvertisement(advId);
+    public AdvGetDetailRes getAdvertisementsDetail(final Long advId) {
+        Advertisement advertisement = getAdvertisement(advId);
         List<AdImage> adImages = adImageRepository.findAllById(advId);
         return AdvGetDetailRes.of(
                 getImages(adImages), advertisement.getTitle(), advertisement.getCreatedAt().toLocalDate(),
@@ -48,9 +41,15 @@ public class AdvertisementService {
         );
     }
 
-    private Advertisement getadvertisement(final Long advId) {
+    private Advertisement getAdvertisement(final Long advId) {
         return advertisementRepository.findById(advId).orElseThrow(
                 () -> new EntityNotFoundException(FailureCode.ADVERTISEMENT_NOT_FOUND)
         );
+    }
+
+    private List<AdvImagesRes> getImages(final List<AdImage> adImages) {
+        return adImages.stream().map(
+                adImage -> AdvImagesRes.of(adImage.getImageUrl(), adImage.getSequence())
+        ).toList();
     }
 }
